crates/rolldown/tests/rolldown/errors/invalid_option/include_dependencies_recursively_conflict_preserve_entry_signatures/lib.js
export const value = 'library value';

export function helper() {
  return 'helper function';
}